menu + detail styling

--- a/src/App.css
+++ b/src/App.css
@@ -143,8 +143,54 @@ li {
     color: white; }
     .menu__item-name:hover {
       text-decoration: none; }
+    .menu__item-name > h2 {
+      font-family: Source Sans Pro, sans-serif; }
   .menu__item-img {
-    width: 100%;
-    height: 100%;
+    width: 110px;
+    height: 89px;
     -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 100%, 100% 90%);
     clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 90% 100%); }
+
+.menu__header-title {
+  font-family: Cabin, sans-serif; }
+
+.detail {
+  width: 1000px;
+  height: 350px;
+  margin-bottom: 90px; }
+  .detail__image {
+    width: 100%; }
+  .detail__title {
+    font-family: Cabin, sans-serif; }
+  .detail__image > img {
+    width: 100%;
+    height: 300px; }
+  .detail__description > p {
+    padding: 40px;
+    font-size: 1.2rem;
+    font-size: 500;
+    font-family: Cabin, sans-serif; }
+  .detail__comments-item {
+    display: block;
+    width: 700px;
+    margin-top: 20px;
+    border: thin solid darkgoldenrod;
+    border-radius: 3px; }
+    .detail__comments-item > * {
+      font-family: Cabin, sans-serif; }
+    .detail__comments-item > div > p {
+      padding-left: 20px;
+      margin: 2px; }
+
+.edit {
+  font-size: 0.7rem;
+  border: none;
+  color: #1769aa; }
+
+.delete {
+  font-size: 0.7rem;
+  border: none;
+  color: #1769aa; }
+
+.lnr-star {
+  color: darkgoldenrod; }
