--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -23,14 +23,22 @@
             &:hover {
                 text-decoration: none;
             }
+
+            & > h2 {
+                font-family: Source Sans Pro, sans-serif;
+            }
         }
 
         &-img {
-            width: 100%;
-            height: 100%;
+            width: 110px;
+            height: 89px;
             -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 100%, 100% 90%);
             clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 90% 100%);
             // (0% 100%, 0% 0%, 100% 0%, 90% 100%)
         }
+    }
+
+    &__header-title {
+        font-family: Cabin, sans-serif;
     }
 }
