--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ address {
   margin-top: 50px; }
 
 .footer {
-  background-color: #4c7d69;
+  background-color: #1769aa;
   -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
   clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%); }
   .footer p {
@@ -112,23 +112,73 @@ li {
 
 .header {
   background-color: white;
-  height: 100px; }
+  height: 100px;
+  border-bottom: 2px solid #1769aa; }
   .header > * {
     font-family: Cabin, sans-serif; }
   .header a {
-    color: #4c7d69; }
+    color: #1769aa; }
     .header a:hover {
-      color: #253e34; }
+      color: #0b3250; }
 
 .btn-outline-secondary {
-  border: thin solid #4c7d69;
-  color: #4c7d69; }
+  border: thin solid 1769aa;
+  color: 1769aa; }
   .btn-outline-secondary:hover {
     background-color: white;
-    color: #4c7d69; }
+    color: #1769aa; }
 
 .btn-right {
   margin-left: 10px; }
+
+.login *,
+.register *,
+.comment * {
+  font-family: Cabin, sans-serif; }
+
+.login__header,
+.register__header,
+.comment__header {
+  background-color: #1769aa;
+  color: white;
+  height: 5rem;
+  vertical-align: middle; }
+  .login__header > .close,
+  .register__header > .close,
+  .comment__header > .close {
+    height: 50px;
+    width: 50px; }
+    .login__header > .close > span,
+    .register__header > .close > span,
+    .comment__header > .close > span {
+      font-family: Nunito;
+      font-weight: 200;
+      font-size: 2.3rem;
+      color: white;
+      text-transform: uppercase; }
+
+.login input, .login textarea, .login select,
+.register input,
+.register textarea,
+.register select,
+.comment input,
+.comment textarea,
+.comment select {
+  border-radius: 0; }
+
+.login button,
+.register button,
+.comment button {
+  border-radius: 0;
+  margin-left: auto;
+  background-color: #1769aa;
+  border: none; }
+
+.modal-content {
+  border-radius: 0; }
+
+.modal-header {
+  border-radius: 0; }
 
 .menu__item {
   background-image: linear-gradient(to bottom right, #0276aa, #6d1b7b);
