--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #4c7d69;
+    background-color: #1769aa;
     -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
     clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
 
