--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,29 +1,33 @@
 .header {
-    background-color: white;
-    height: 100px;
-    border-bottom: 2px solid #1769aa;
+    // background-color: white;
+    background-image: linear-gradient(to right,#480048, #C04848);
+    height: 80px;
+    // border-bottom: 2px solid #1769aa;
 
     & > * {
         font-family: Cabin, sans-serif;
     }
 
     & a {
-        color: #1769aa;
+        color: #fff;
     
-        &:hover {
-            color: darken(#1769aa, 20%);
-        }
+        // &:hover {
+        //     color: darken(#1769aa, 20%);
+        // }
     }
 }
 
 .btn-outline-secondary {
     border: thin solid 1769aa;
-    color: 1769aa;
+    color: #333;
+    background-color: #FFC107;
+    border: none;
+    border-radius: 25px;
 
     &:hover {
         // box-shadow: 1px 1px 1px 1px #4c7d69;
-        background-color: white;
-        color: #1769aa;
+        background-color: #3f9fff;
+        color: #fff;
     }
 }
 
