--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,13 +1,27 @@
 .footer {
-    background-color: #1769aa;
-    -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
-    clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
+    background-color: #121921;
+    // -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
+    // clip-path: polygon(0% 100%, 0% 0%, 100% 20%, 100% 100%);
 
     & p {
         margin-top: 5px;
         color: floralwhite;
         font-size: 1rem;
     }
+
+    & > .container {
+        margin-bottom: 50px;
+        margin-top: 10px;
+    }
+
+    & > .container > hr {
+        background-color: #fff;
+        opacity: 0.7;
+    }
+}
+
+h5 {
+    color: #fff;
 }
 
 li {
@@ -23,6 +37,43 @@ li {
     }
 }
 
+.follow_us i {
+    opacity: 0.7;
+}
+
+.follow_us:first-child {
+    color: #fff;
+    padding-left: 0;
+}
+
+.follow_us ul li {
+    display: inline-block;
+    margin-right: 30px;
+    font-size: 20px;
+    font-size: 1.25rem;
+
+    & > a > i:hover{
+        opacity: 1;
+    }
+}
+
+.links, .contacts {
+    padding-left: 0;
+     
+    & > li {
+        list-style: none;
+
+        & > a {
+            color: #fff;
+            opacity: 0.7;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
+    }
+}
+
 .email {
     color: floralwhite;
     font-size: 1rem;
@@ -35,4 +86,9 @@ li {
 
 .mailing {
     text-align: center;
+}
+
+#copy {
+    color: #fff;
+    opacity: 0.7;
 }
