--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -48,7 +48,7 @@
   }
 
   &__welcome {
-    background-image: url('./images/background.jpg');
+    background: linear-gradient(rgba(102, 45, 145, 0.8), rgba(102, 45, 145, 0.8)), url('./images/background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
