--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -5,6 +5,7 @@
         background-image: linear-gradient(to bottom right, #0276aa, #6d1b7b);
         border-radius: 3px; 
         height: 89px;
+        transition: all 0.3s;
 
         &:hover {
             // box-shadow: 3px 3px 4px #BDBDBD;
@@ -30,7 +31,7 @@
         }
 
         &-img {
-            width: 110px;
+            max-width: 110px;
             height: 89px;
             -webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 100%, 100% 90%);
             clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 90% 100%);
